package io.kostenarov.natureSim.Enums;

public enum EntityBehaviour {
    EXPLORING,
    SEEKING_FOOD,
    SEEKING_WATER,
    SEEKING_MATE,
    FLEEING,
    IDLE,
}
