package io.kostenarov.natureSim.Enums;

public enum Gender {
    MALE,
    FEMALE
}
